add is_japana
